--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "swk-metaobject",
-  "version": "0.0.0",
-  "description": "library to support modular application structure",
+  "version": "0.0.1",
+  "description": "functional alternative to inheritance",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/sunwukung/matryoshka"
+    "url": "https://github.com/sunwukung/swk-metaobject"
   },
   "author": "Marcus Kielly",
   "license": "BSD-2-Clause",
+  "dependencies": {
+    "lodash": "~2.4.1"
+  },
   "devDependencies": {
     "chai": "~1.9.2",
     "coffee-loader": "~0.7.2",
@@ -25,12 +28,7 @@
     "gulp-open": "~0.3.0",
     "gulp-plato": "~1.0.1",
     "gulp-util": "~3.0.1",
-    "inverse": "^0.10.0",
-    "js-extend": "0.0.2",
-    "lodash": "~2.4.1",
     "mocha": "~1.21.4",
-    "mocha-sinon": "~1.1.3",
-    "sinon": "~1.10.3",
-    "sinon-chai": "~2.6.0"
+    "sinon": "~1.10.3"
   }
 }
