--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "swk-metaobject",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "functional alternative to inheritance",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/sunwukung/swk-metaobject"
@@ -13,7 +10,7 @@
   "author": "Marcus Kielly",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "lodash": "~2.4.1"
+    "swk-types": "0.0.1"
   },
   "devDependencies": {
     "chai": "~1.9.2",
